--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
             <div class="qr-box">
                 <img src="qr.jpg" alt="Scan QR Code">
  <img src="qr2.png" alt="Scan QR Code">
-                   <img src="qr3.jpeg" alt="WhatsApp QR Code"
-             style="width:120px; height:120px; border:1px solid #ccc; padding:5px; background:#fff;">
+                   <img src="qr3.jpeg" alt="WhatsApp QR Code">
             </div>
         </div>
     </div>
@@ -163,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
